# RogEng

./: .clang-format  CMakeLists.txt  README.md
.cache/clangd/index/: RogEng.cpp.C3B1562CF7D95BB8.idx  RogEng.hpp.5163F046DB5F9DEB.idx  RogEng.hpp.AC55470815461250.idx  command_line_arguments.cpp.354E9DA21BC3A04C.idx  command_line_arguments.h.86C5FE3750C073C7.idx  config.h.18BB5268B990CFF1.idx  contmem.cpp.589A974DD4893465.idx  core.cpp.C5657410733A3F88.idx  core.h.14F9C05CA731A88C.idx  ecs.cpp.479FF8B21A3D3EB4.idx  ecs.cpp.6322072E6870C73B.idx  ecs.h.30133746F3858AB8.idx  ecs.h.F688F7BBDECE937C.idx  editor.cpp.4248EF527B5B307F.idx  engine.cpp.34856ADDF7E7A523.idx  helperr.cpp.5B37A12C7C2CE52E.idx  helperr.h.F816F4BEC51A5CB9.idx  helpmsg.cpp.3A14D5AB08B1CC91.idx  helpmsg.h.AFAF5555C5652171.idx  init.cpp.9BDF40637A3D0FCB.idx  init.cpp.DD7E8E26BC9A9DFE.idx  initialize_modules.cpp.EF54AA8B8CF0DD64.idx  log.cpp.3CB5A6B718311D29.idx  log.cpp.A580923266920A21.idx  log.h.108B9CD07C3B1106.idx  log.h.472C5E5898E3DB10.idx  lua.cpp.9D12716ADA7BEE95.idx  lua.h.C072140CF0C0ED40.idx  main.cpp.59CA970D314BC144.idx  pch.h.05A8CD3B9A9CEC9B.idx  popl.hpp.2ADB7913B45D57D0.idx  rogeng.cpp.60FCA61DA516CAFD.idx  rogeng.h.1407A064EE3ECDEC.idx  shutdown.cpp.2876795F559AD5A4.idx  shutdown.cpp.8F79333A245B05CD.idx  staticvector.h.B025F46F0EC6E1FB.idx
samples/: CMakeLists.txt  sample.cpp
src/: RogEng.hpp
src/RogEng/: RE.cpp  RE.hpp  RogEng.cpp  RogEng.hpp  context.cpp  entity.cpp  entity.hpp  logging.cpp  logging.hpp  scene.cpp  scene.hpp
tests/: CMakeLists.txt  tests_entity.cpp
